add font-size, font-family and line-height to settings
- add small and large modifier for button
- update readme

--- a/toolkits/global/packages/global-buttons/scss/30-mixins/buttons.scss
+++ b/toolkits/global/packages/global-buttons/scss/30-mixins/buttons.scss
@@ -5,14 +5,15 @@
  */
 
 @mixin button-shared {
-	@include u-text-interface;
 	display: block;
 	border-width: $button-shared--border-width;
 	border-style: $button-shared--border-style;
-	position: relative;
 	cursor: pointer;
+	font-family: $button-base--font-family;
+	font-size: $button-base--font-size-normal;
 	text-decoration: none;
 	transition: $button-shared--transition;
+	position: relative;
 }
 
 /**
