--- a/toolkits/global/packages/global-buttons/scss/50-components/buttons.scss
+++ b/toolkits/global/packages/global-buttons/scss/50-components/buttons.scss
@@ -7,6 +7,16 @@
 	@include button($button--default);
 }
 
+.c-button--small {
+	font-size: $button--font-size-small;
+	line-height: $button--line-height-small;
+}
+
+.c-button--large {
+	font-size: $button--font-size-large;
+	line-height: $button--line-height-large;
+}
+
 .c-button--primary {
 	@include button-theme($button--primary);
 }
