--- a/toolkits/global/packages/global-buttons/scss/10-settings/buttons.scss
+++ b/toolkits/global/packages/global-buttons/scss/10-settings/buttons.scss
@@ -5,11 +5,17 @@
 
 $button-base--text-align: left;
 $button-base--padding: 8px;
-$button-base--line-height: 1.6;
+$button-base--font-size-normal: 16px;
+$button-base--line-height: 1.4;
+$button-base--font-family: sans-serif;
 $button-base--border-radius: 2px;
 $button-shared--border-width: 1px;
 $button-shared--border-style: solid;
 $button-shared--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
+$button--font-size-small: 14px;
+$button--font-size-large: 18px;
+$button--line-height-small: 1.2;
+$button--line-height-large: 1.6;
 
 /**
  * Button Themes
