simplify naming of settings

--- a/toolkits/global/packages/global-buttons/scss/10-settings/buttons.scss
+++ b/toolkits/global/packages/global-buttons/scss/10-settings/buttons.scss
@@ -3,16 +3,16 @@
  *
  */
 
-$button-base--text-align: left;
-$button-base--padding: 8px;
-$button-base--font-size-normal: 1.6rem;
-$button-base--line-height: 1.3;
-$button-base--font-family: sans-serif;
-$button-base--border-radius: 2px;
-$button-shared--border-width-style: 1px solid;
-$button-shared--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
+$button--border-radius: 2px;
+$button--border-width-style: 1px solid;
+$button--line-height: 1.3;
+$button--font-family: sans-serif;
 $button--font-size-small: 1.4rem;
+$button--font-size-normal: 1.6rem;
 $button--font-size-large: 1.8rem;
+$button--padding: 8px;
+$button--text-align: left;
+$button--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
 
 /**
  * Button Themes
@@ -24,7 +24,7 @@ $button--default: (
 	'color': darkblue,
 	'backgroundColor': greyscale(95),
 	'backgroundImage': linear-gradient(to bottom, white, greyscale(95)),
-	'border': $button-shared--border-width-style greyscale(80),
+	'border': $button--border-width-style greyscale(80),
 	'visitedColor': darkblue,
 	'hoverColor': white,
 	'hoverBorderColor': greyscale(40),
@@ -39,7 +39,7 @@ $button--primary: (
 	'color': white,
 	'backgroundColor': darkblue,
 	'backgroundImage': none,
-	'border': $button-shared--border-width-style blue,
+	'border': $button--border-width-style blue,
 	'visitedColor': white,
 	'hoverColor': white,
 	'hoverBorderColor': blue,
@@ -53,7 +53,7 @@ $button--disabled: (
 	'color': greyscale(),
 	'backgroundColor': transparent,
 	'backgroundImage': none,
-	'border': $button-shared--border-width-style greyscale(80),
+	'border': $button--border-width-style greyscale(80),
 	'visitedColor': greyscale(),
 	'opacity': 0.7,
 	'hoverColor': greyscale(),
