--- a/toolkits/global/packages/global-buttons/scss/50-components/buttons.scss
+++ b/toolkits/global/packages/global-buttons/scss/50-components/buttons.scss
@@ -19,9 +19,9 @@
 	@include button-theme($button--primary);
 }
 
-.c-button--inline {
-	display: inline-block;
-	width: auto;
+.c-button--block {
+	display: block;
+	width: 100%;
 }
 
 .c-button--disabled,
