--- a/toolkits/springer/packages/springer-buttons/scss/50-components/buttons.scss
+++ b/toolkits/springer/packages/springer-buttons/scss/50-components/buttons.scss
@@ -1,3 +1,15 @@
+.c-button {
+	@include font-size($button--font-size-normal)
+}
+
+.c-button--small {
+	@include font-size($button--font-size-small)
+}
+
+.c-button--large {
+	@include font-size($button--font-size-large)
+}
+
 .c-button--ghost {
 	@include button-theme($button--ghost);
 }
