Add sensible defaults to breakpoints

--- a/toolkits/global/packages/global-context/scss/10-settings/breakpoints.scss
+++ b/toolkits/global/packages/global-context/scss/10-settings/breakpoints.scss
@@ -4,6 +4,9 @@
  */
 
 $breakpoints: (
-	'small': 10px,
-	'large': 100px
+	'xs': 320px,
+	'sm': 540px,
+	'md': 768px,
+	'lg': 1024px,
+	'xl': 1220px
 );
