--- a/toolkits/springer/packages/springer-pagination/scss/10-settings/pagination.scss
+++ b/toolkits/springer/packages/springer-pagination/scss/10-settings/pagination.scss
@@ -1,16 +1,13 @@
-$springer-pagination--background: greyscale(95);
-$springer-pagination--border-color: greyscale(80);
 $springer-pagination--padding: spacing(16);
-$springer-pagination--border-radius: 3px;
 $springer-pagination--font-size: $font-size-xs;
-$springer-pagination--item-spacing: spacing(4);
 
-$springer-pagination--link-padding: spacing(4, 8);
-$springer-pagination--link-color: color('action-base');
-$springer-pagination--link-color-active: #fff;
-$springer-pagination--link-color-disabled: greyscale(40);
-$springer-pagination--link-background-color-hover: greyscale(90);
-$springer-pagination--link-background-color-active: color('action-base');
+$springer-pagination--link-active-color: white;
+$springer-pagination--link-active-border-color: greyscale(40);
+$springer-pagination--link-active-background-color: greyscale(40);
+
+$springer-pagination--item-margin-right: spacing(16);
+$springer-pagination--item-margin-bottom: spacing(8);
+$springer-pagination--item-width: 30px;
 
 $springer-pagination--icon-color: greyscale(60);
 $springer-pagination--icon-clickable-color: color('action-base');
