add padding to c-button--large

--- a/toolkits/global/packages/global-button/scss/10-settings/button.scss
+++ b/toolkits/global/packages/global-button/scss/10-settings/button.scss
@@ -11,6 +11,7 @@ $button--font-size-small: 1.4rem;
 $button--font-size-normal: 1.6rem;
 $button--font-size-large: 1.8rem;
 $button--padding: 8px;
+$button--padding-large: 12px 16px;
 $button--text-align: center;
 $button--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
 
