--- a/toolkits/springer/packages/springer-button/scss/10-settings/button-springer.scss
+++ b/toolkits/springer/packages/springer-button/scss/10-settings/button-springer.scss
@@ -9,9 +9,10 @@ $button--line-height: 1.3;
 $button--font-family: $font-family-sans;
 $button--font-size-small: $font-size-xs;
 $button--font-size-normal: $font-size-sm;
-$button--font-size-large: $font-size-md;
+$button--font-size-large: $font-size-sm;
 $button--padding: spacing(8);
-$button--text-align: left;
+$button--padding--large: spacing(16);
+$button--text-align: center;
 $button--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
 
 /**
