Sets colour on dropdown links

--- a/toolkits/springer/packages/springer-dropdown/scss/10-settings/springer-dropdown.scss
+++ b/toolkits/springer/packages/springer-dropdown/scss/10-settings/springer-dropdown.scss
@@ -14,4 +14,5 @@ $dropdown--button-caret-color: currentColor;
 $dropdown--link-padding: spacing(4) $dropdown--menu-padding-x;
 $dropdown--link-background-color: transparent;
 $dropdown--link-background-color-hover: color('action-light');
+$dropdown--link-color: color('action-base');
 $dropdown--link-color-hover: white;
