Adds colour to link

--- a/toolkits/springer/packages/springer-dropdown/scss/50-components/springer-dropdown.scss
+++ b/toolkits/springer/packages/springer-dropdown/scss/50-components/springer-dropdown.scss
@@ -70,6 +70,7 @@
 	display: block;
 	padding: $dropdown--link-padding;
 	background-color: $dropdown--link-background-color;
+	color: $dropdown--link-color;
 
 	&:visited {
 		color: $dropdown--link-color;
