--- a/toolkits/global/packages/global-button/scss/10-settings/button.scss
+++ b/toolkits/global/packages/global-button/scss/10-settings/button.scss
@@ -3,7 +3,6 @@
  *
  */
 
-$button--border-radius: 2px;
 $button--border-width-style: 1px solid;
 $button--line-height: 1.3;
 $button--font-family: sans-serif;
@@ -23,6 +22,7 @@ $button--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
  */
 
 $button--default: (
+	'border-radius': $button--border-radius,
 	'color': darkblue,
 	'backgroundColor': greyscale(95),
 	'backgroundImage': none,
