add border-radius value

--- a/toolkits/global/packages/global-button/scss/10-settings/button.scss
+++ b/toolkits/global/packages/global-button/scss/10-settings/button.scss
@@ -22,7 +22,7 @@ $button--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
  */
 
 $button--default: (
-	'border-radius': $button--border-radius,
+	'border-radius': 2px,
 	'color': darkblue,
 	'backgroundColor': greyscale(95),
 	'backgroundImage': none,
