changes to the global-card component

--- a/toolkits/global/packages/global-card/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/_default.scss
@@ -1,3 +1,8 @@
+/**
+ * Card
+ * Default branding for component
+ */
+
 $card--gutter: 16px;
 $card--font-family: inherit;
 $card--font-size: 1.4rem;
