--- a/toolkits/springer/packages/springer-context/scss/30-mixins/headings.scss
+++ b/toolkits/springer/packages/springer-context/scss/30-mixins/headings.scss
@@ -1,14 +1,6 @@
 @mixin heading-link {
 	a {
-		text-decoration: none;
-
-		&:hover {
-			text-decoration: underline;
-		}
-
-		&:active {
-			text-decoration: none;
-		}
+		@include interface-link;
 	}
 }
 
