separate out the abstracts in default

--- a/context/brand-context/default/scss/enhanced.scss
+++ b/context/brand-context/default/scss/enhanced.scss
@@ -3,27 +3,5 @@
  * Bootstrap the rest of the styles on cut the mustard
  */
 
-@import '10-settings/breakpoints';
-@import '10-settings/colors';
-@import '10-settings/container';
-@import '10-settings/keyframes';
-@import '10-settings/layers';
-@import '10-settings/style';
-@import '10-settings/typography';
-
-@import '20-functions/colors';
-@import '20-functions/helpers';
-@import '20-functions/layers';
-
-@import '30-mixins/buttons';
-@import '30-mixins/clearfix';
-@import '30-mixins/container';
-@import '30-mixins/media-query';
-@import '30-mixins/hiding';
-@import '30-mixins/icons';
-@import '30-mixins/keyframes';
-@import '30-mixins/lists';
-@import '30-mixins/style';
-@import '30-mixins/typography';
-
+@import 'abstracts';
 @import '40-base/typography';
