--- a/context/brand-context/nature/scss/core.scss
+++ b/context/brand-context/nature/scss/core.scss
@@ -4,26 +4,15 @@
  * both do and dont cut the mustard, keep to a minimum
  */
 
-// 10-settings
+// Default setting, functions, mixins
+@import '../../default/scss/abstracts';
 
+// Nature specific abstracts
 @import '10-settings/colors/default';
-@import '../../default/scss/10-settings/typography.scss';
+@import '10-settings/global'; // temp, will be removed eventually
 
-// 20-functions
-
-@import '../../default/scss/20-functions/colors';
-
-// 30-mixins
-
-@import '../../default/scss/30-mixins/hiding';
-@import '../../default/scss/30-mixins/lists';
-@import '../../default/scss/30-mixins/typography';
-
-// temp, will be removed eventually
-
-@import '10-settings/global';
-
-// 40-base
-
+// 40-base, default
 @import '../../default/scss/40-base/normalize';
+
+// 40-base, nature
 @import '40-base/basic';
