springer brand-context files

--- a/context/brand-context/springer/scss/10-settings/colors/default.scss
+++ b/context/brand-context/springer/scss/10-settings/colors/default.scss
@@ -9,8 +9,9 @@ $colors: (
 	'corporate-light': scale-color(#00285a, $lightness: 10%),
 	'error': #c40606,
 	'warning': #fc0,
+	'info': #004b83,
 	'success': #71ab0b,
-	'visited': #4500a7,
+	'visited': #a345c9,
 	'action-base': #004b83,
 	'action-light': scale-color(#004b83, $lightness: 10%),
 	'action-dull': #97bfd8,
