--- a/context/brand-context/springer/scss/40-base/layout.scss
+++ b/context/brand-context/springer/scss/40-base/layout.scss
@@ -4,7 +4,7 @@
  */
 
 html {
-	font-family: $font-family-serif;
+	font-family: $font-family-sans;
 	height: 100%;
 	overflow-y: scroll;
 	font-size: 62.5%;
