--- a/context/brand-context/springer/scss/core.scss
+++ b/context/brand-context/springer/scss/core.scss
@@ -4,5 +4,12 @@
  * both do and dont cut the mustard, keep to a minimum
  */
 
+// Default setting, functions, mixins
+@import '../../default/scss/abstracts';
+
+// Springer settings, functions, mixins
+@import 'abstracts';
+
+// 40-base
 @import '../../default/scss/40-base/normalize';
 @import "40-base/basic";
