--- a/context/brand-context/springernature/scss/core.scss
+++ b/context/brand-context/springernature/scss/core.scss
@@ -4,15 +4,11 @@
  * both do and dont cut the mustard, keep to a minimum
  */
 
-// 10-settings
-@import '10-settings/colors';
-@import '10-settings/typography';
+// Default setting, functions, mixins
+@import '../../default/scss/abstracts';
 
-// 20-functions
-@import '../../default/scss/20-functions/colors';
-
-// 30-mixins
-@import '../../default/scss/30-mixins/typography';
+// Springernature settings, functions, mixins
+@import 'abstracts';
 
 // 40-base
 @import '../../default/scss/40-base/normalize';
