--- a/context/brand-context/springernature/scss/enhanced.scss
+++ b/context/brand-context/springernature/scss/enhanced.scss
@@ -3,22 +3,12 @@
  * Bootstrap the rest of the styles on cut the mustard
  */
 
-@import '10-settings/breakpoints';
-@import '10-settings/colors';
-@import '../../default/scss/10-settings/keyframes';
-@import '../../default/scss/10-settings/style';
-@import '10-settings/typography';
+// Default setting, functions, mixins
+@import '../../default/scss/abstracts';
 
-@import '../../default/scss/20-functions/colors';
-@import '../../default/scss/20-functions/helpers';
+// Springernature settings, functions, mixins
+@import 'abstracts';
 
-@import '../../default/scss/30-mixins/media-query';
-@import '../../default/scss/30-mixins/flex';
-@import '../../default/scss/30-mixins/hiding';
-@import '../../default/scss/30-mixins/keyframes';
-@import '../../default/scss/30-mixins/lists';
-@import '../../default/scss/30-mixins/style';
-@import '../../default/scss/30-mixins/typography';
-
+// 40-base
 @import '40-base/layout';
 @import '40-base/links';
