Fixes a bug when using the color mapping as sprignernature-context colors did not contain greyscale references

--- a/toolkits/springernature/packages/springer-nature-context/scss/10-settings/colors.scss
+++ b/toolkits/springernature/packages/springer-nature-context/scss/10-settings/colors.scss
@@ -22,3 +22,14 @@ $colors: (
 	'blue': #007e99,
 	'red': #c64040,
 );
+
+/**
+ * Color and gray scales
+ *
+ */
+
+$page-base: #f8f;
+$greyscale-base: #555;
+$greyscale-min: 20;
+$greyscale-max: 95;
+$greyscale-stops: 5;
