reverts changes to brand-context

--- a/toolkits/springernature/packages/springer-nature-context/scss/enhanced.scss
+++ b/toolkits/springernature/packages/springer-nature-context/scss/enhanced.scss
@@ -18,6 +18,7 @@
 @import '30-mixins/keyframes';
 @import '30-mixins/lists';
 @import '30-mixins/style';
+@import '30-mixins/typography';
 
 @import '40-base/layout';
 @import '40-base/links';
