--- a/toolkits/global/packages/global-forms/scss/10-settings/_global-forms.scss
+++ b/toolkits/global/packages/global-forms/scss/10-settings/_global-forms.scss
@@ -11,6 +11,8 @@ $global-form--background-color: #fff;
 $global-form--background-color-disabled: #f3f2ef;
 $global-form--border-color-disabled:  #c7c4bf;
 $global-form--font-size: 18px;
+$global-form--label-font-size: $global-form--font-size / 1.3;
+$global-form--label-margin: 10px;
 $global-form--color: #000;
 $global-form--color-required: #c64127;
 $global-form--color-disabled: #aca9a3;
