--- a/toolkits/global/packages/global-forms/scss/50-components/_global-forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_global-forms.scss
@@ -28,8 +28,8 @@
 .c-input-group__label {
 	display: inline-block;
 	line-height: 2;
-	font-size: $global-form--font-size / 1.3;
-	margin-bottom: 0.3rem;
+	font-size: $global-form--label-font-size;
+	margin-bottom: $global-form--label-margin;
 
 
 	&--check {
