--- a/toolkits/springer/packages/springer-listing/scss/10-settings/listing.scss
+++ b/toolkits/springer/packages/springer-listing/scss/10-settings/listing.scss
@@ -1,17 +1,17 @@
-$springer-listing--font-family: $font-family-sans;
-$springer-listing--title-font-family: $font-family-serif;
-$springer-listing--title-font-size: 1.8rem;
-$springer-listing--title-font-weight: normal;
-$springer-listing--title-margin-bottom: 4px;
-$springer-listing--title-line-height: 1.3;
-$springer-listing--text-column-flex: 1 0 70%;
-$springer-listing--text-font-size: 1.6rem;
-$springer-listing--text-margin-bottom: 8px;
-$springer-listing--text-color-light: greyscale(40);
-$springer-listing--author-font-size: 1.6rem;
-$springer-listing--author-font-weight: 400;
-$springer-listing--image-width: 200px;
-$springer-listing--image-margin-left: 16px;
-$springer-listing--image-border: 1px solid greyscale(80);
-$springer-listing--view-options-margin-right: 12px;
-$springer-listing--view-options-icon-margin-right: 4px;
+$listing--font-family: $font-family-sans;
+$listing--title-font-family: $font-family-serif;
+$listing--title-font-size: 1.8rem;
+$listing--title-font-weight: normal;
+$listing--title-margin-bottom: 4px;
+$listing--title-line-height: 1.3;
+$listing--text-column-flex: 1 0 70%;
+$listing--text-font-size: 1.6rem;
+$listing--text-margin-bottom: 8px;
+$listing--text-color-light: greyscale(40);
+$listing--author-font-size: 1.6rem;
+$listing--author-font-weight: 400;
+$listing--image-width: 200px;
+$listing--image-margin-left: 16px;
+$listing--image-border: 1px solid greyscale(80);
+$listing--view-options-margin-right: 12px;
+$listing--view-options-icon-margin-right: 4px;
