--- a/toolkits/springer/packages/springer-meta/scss/10-settings/meta.scss
+++ b/toolkits/springer/packages/springer-meta/scss/10-settings/meta.scss
@@ -1,9 +1,9 @@
-$springer-meta--font-size: 1.4rem;
-$springer-meta--font-family: $font-family-sans;
-$springer-meta--line-height: inherit;
-$springer-meta--padding-right: 0.5em;
-$springer-meta--margin-right: 0.5em;
-$springer-meta--border: 1px solid greyscale(80);
-$springer-meta--color: greyscale(40);
-$springer-meta--margin-bottom: 4px;
-$springer-meta--font-weight: 700;
+$meta--font-size: 1.4rem;
+$meta--font-family: $font-family-sans;
+$meta--line-height: inherit;
+$meta--padding-right: 0.5em;
+$meta--margin-right: 0.5em;
+$meta--border: 1px solid greyscale(80);
+$meta--color: greyscale(40);
+$meta--margin-bottom: 4px;
+$meta--font-weight: 700;
