--- a/toolkits/global/packages/global-button/scss/50-components/_button.scss
+++ b/toolkits/global/packages/global-button/scss/50-components/_button.scss
@@ -7,6 +7,23 @@
 	@include button($button--default);
 }
 
+/* button types */
+
+.c-button--primary {
+	@include button-theme($button--primary);
+}
+
+.c-button--ghost {
+	@include button-theme($button--ghost);
+}
+
+.c-button--disabled,
+.c-button:disabled {
+	@include button-disabled;
+}
+
+/* button variants */
+
 .c-button--small {
 	font-size: $button--font-size-small;
 }
@@ -14,10 +31,6 @@
 .c-button--large {
 	font-size: $button--font-size-large;
 	padding: $button--padding-large;
-}
-
-.c-button--primary {
-	@include button-theme($button--primary);
 }
 
 .c-button--full-width {
@@ -35,9 +48,4 @@
 	svg {
 		margin-left: $button--icon-margin;
 	 }
-}
-
-.c-button--disabled,
-.c-button:disabled {
-	@include button-disabled;
 }
