use default before brand

--- a/toolkits/global/packages/global-button/scss/10-settings/_nature.scss
+++ b/toolkits/global/packages/global-button/scss/10-settings/_nature.scss
@@ -1,4 +1,12 @@
 /**
+ *  Button settings
+ *
+ */
+
+// Default button setting
+@import 'default';
+
+/**
  * Button Themes
  * Variables to set themes styles
  *
