update readme and general naming

--- a/toolkits/global/packages/global-button/scss/50-components/_button.scss
+++ b/toolkits/global/packages/global-button/scss/50-components/_button.scss
@@ -7,7 +7,7 @@
 	@include button($button--default);
 }
 
-/* button types */
+/* button themes */
 
 .c-button--primary {
 	@include button-theme($button--primary);
