add line-height to label

--- a/toolkits/global/packages/global-ad/scss/10-settings/ad.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/ad.scss
@@ -8,3 +8,4 @@ $ad--mpu-padding-bottom: spacing(24);
 $ad--mpu-label-margin-bottom: spacing(8);
 $ad--label-margin-bottom: spacing(4);
 $ad--label-color: greyscale(40);
+$ad--label-line-height: 1.5;
