--- a/toolkits/global/packages/global-ad/scss/50-components/ad.scss
+++ b/toolkits/global/packages/global-ad/scss/50-components/ad.scss
@@ -66,4 +66,5 @@ body > img[src*=pbgrd] {
 .c-ad__label {
 	margin-bottom: $ad--label-margin-bottom;
 	color: $ad--label-color;
+	line-height: $ad--label-line-height;
 }
