--- a/toolkits/global/packages/global-ad/scss/10-settings/ad.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/ad.scss
@@ -1,4 +1,4 @@
-$ad--font-size: $font-size-xs;
+$ad--font-size: 1.4rem;
 $ad--leaderboard-bg-color: greyscale(95);
 $ad--leaderboard-padding: spacing(8);
 $ad--mpu-background-color: greyscale(95);
