--- a/toolkits/global/packages/global-ad/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/default.scss
@@ -1,11 +1,11 @@
 $ad--font-size: 1.4rem;
-$ad--leaderboard-bg-color: greyscale(95);
+$ad--leaderboard-bg-color: #ccc;
 $ad--leaderboard-padding: spacing(8);
-$ad--mpu-background-color: greyscale(95);
+$ad--mpu-background-color: #ccc;
 $ad--mpu-margin-top: spacing(24);
 $ad--mpu-padding-top: spacing(8);
 $ad--mpu-padding-bottom: spacing(24);
 $ad--mpu-label-margin-bottom: spacing(8);
 $ad--label-margin-bottom: spacing(4);
-$ad--label-color: greyscale(40);
+$ad--label-color: #333;
 $ad--label-line-height: 1.5;
