use $font-family-sans as setting

--- a/toolkits/global/packages/global-ad/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/default.scss
@@ -1,3 +1,4 @@
+$ad--font-family: $font-family-sans;
 $ad--font-size: 1.4rem;
 $ad--leaderboard-bg-color: #ccc;
 $ad--leaderboard-padding: spacing(8);
