nature doesnt have rfs package so removing font-size mixin

--- a/toolkits/global/packages/global-ad/scss/50-components/ad.scss
+++ b/toolkits/global/packages/global-ad/scss/50-components/ad.scss
@@ -4,7 +4,7 @@ body > img[src*=pbgrd] {
 }
 
 .c-ad {
-	@include font-size($ad--font-size);
+	font-size: $ad--font-size;
 	font-family: $ad--font-family;
 	display: none;
 
