modal not model

--- a/toolkits/springernature/packages/springernature-modal/scss/10-settings/springernature.scss
+++ b/toolkits/springernature/packages/springernature-modal/scss/10-settings/springernature.scss
@@ -3,5 +3,5 @@
  * Brand specific settings
  */
 
-$model--border-color: color('blue');
-$model--close-color: color('dove');
+$modal--border-color: color('blue');
+$modal--close-color: color('dove');
